RDCC-4453: Addressing Sonar Issues (#1220)
* RDCC-4453: addressing Sonar Issues in SuperController.java

* RDCC-4453: addressing Sonar Issues in OrganisationExternalController.java

* RDCC-4453: addressing Sonar Issues in ProfessionalExternalUserController.java

* RDCC-4453: addressing Sonar Issues in OrganisationCreationRequestValidator.java

* RDCC-4453: addressing Sonar Issues in PaymentAccountValidator.java

* RDCC-4453: addressing Sonar Issues in ProfessionalUserReqValidator.java

* RDCC-4453: addressing Sonar Issues in OrganisationStatusValidatorImpl.java

* RDCC-4453: addressing Sonar Issues in ContactInformationResponseWithDxAddress.java

* RDCC-4453: addressing Sonar Issues in MultipleUserProfilesResponse.java

* RDCC-4453: addressing Sonar Issues in OrganisationEntityResponse.java

* RDCC-4453: addressing Sonar Issues in OrganisationMinimalInfoResponse.java

* RDCC-4453: addressing Sonar Issues in OrganisationsDetailResponse.java

* RDCC-4453: addressing Sonar Issues in OrganisationRepository.java

* RDCC-4453: addressing Sonar Issues in OrganisationServiceImpl.java

* RDCC-4453: reverting TextBlock fixes, adding suppression with comment

* RDCC-4453: removing unused imports

* RDCC-4453: addressing Sonar Issues

* RDCC-4468: adding entries to audit.json

* RDCC-4453: removing Suppression for TextBlock adding Constants

* RDCC-4453: removing Suppression for TextBlock adding Constants

* RDCC-4453: Upgrading `spring-core` to `5.3.19`

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>